--- a/WK.Tea.Web/Web.config
+++ b/WK.Tea.Web/Web.config
@@ -4,45 +4,44 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
     <!--网站域名，必须80端口，不要以/结尾-->
-    <add key="Domain" value="http://localhost:13066"/>
+    <add key="Domain" value="http://localhost:13066" />
     <!--微信Token-->
-    <add key="Token" value="TEA"/>
+    <add key="Token" value="TEA" />
     <!--微信消息体加密对应的EncodingAESKey-->
-    <add key="EncodingAESKey" value=""/>
+    <add key="EncodingAESKey" value="" />
     <!--微信AppId-->
-    <add key="AppID" value="wx1db2ce96ffcde003"/>
+    <add key="AppID" value="wx1db2ce96ffcde003" />
     <!--微信AppSecret-->
-    <add key="AppSecret" value="d8f85f2d83988fe8f08d1786a7ef317e"/>
+    <add key="AppSecret" value="d8f85f2d83988fe8f08d1786a7ef317e" />
     <!--用于微信支付的PartnerKey-->
-    <add key="PartnerKey" value="5a1aec6016b3491eaad63bcd1f3b3ae2"/>
+    <add key="PartnerKey" value="5a1aec6016b3491eaad63bcd1f3b3ae2" />
     <!--用于微信支付的商户号-->
-    <add key="mch_id" value="1531248251"/>
+    <add key="mch_id" value="1531248251" />
     <!--用于微信支付的设备号-->
-    <add key="device_info" value="WEB"/>
+    <add key="device_info" value="WEB" />
     <!--用于微信支付的服务端IP地址-->
-    <add key="spbill_create_ip" value="115.28.44.134"/>
-
+    <add key="spbill_create_ip" value="115.28.44.134" />
     <!--微信Oauth: 
      snsapi_base:      不弹出授权页面，直接跳转，只能获取用户openid;
      snsapi_userinfo:  出授权页面，可通过openid拿到昵称、性别、所在地。并且，即使在未关注的情况下，只要用户授权，也能获取其信息.-->
-    <add key="OauthScope" value="snsapi_userinfo"/>
-
+    <add key="OauthScope" value="snsapi_userinfo" />
     <!--是否开启微信JS接口，1：开启，0：不开启（由于开启JS功能需要定时获取jstickect,会消耗一部分性能，所以不需要JS接口的请写0）-->
-    <add key="OpenJSSDK" value="1"/>
-  
+    <add key="OpenJSSDK" value="1" />
     <!--模板ID-->
-    <add key="OrderPaySuccessMsgTemplateId" value="zGkBSyp3n26UfUgrPxfAgXwew5Kl80ag0ygmGrie3JQ"/>
-    <add key="OrderPayFailMsgTemplateId" value="qvZlCZCYT2g6meFfokTUJkXpMjpaCgjT5Z2qIXWd-AQ"/>
-    <add key="OrderManagerMsgTemplateId" value="zGkBSyp3n26UfUgrPxfAgXwew5Kl80ag0ygmGrie3JQ"/>
-    <add key="CleanMsgTemplateId" value="gYnl65I1FjH1U1qcFFWOCCr_iqR1xgGlYspSBmS9KV0"/>
-  
+    <add key="OrderPaySuccessMsgTemplateId" value="zGkBSyp3n26UfUgrPxfAgXwew5Kl80ag0ygmGrie3JQ" />
+    <add key="OrderPayFailMsgTemplateId" value="qvZlCZCYT2g6meFfokTUJkXpMjpaCgjT5Z2qIXWd-AQ" />
+    <add key="OrderManagerMsgTemplateId" value="zGkBSyp3n26UfUgrPxfAgXwew5Kl80ag0ygmGrie3JQ" />
+    <add key="CleanMsgTemplateId" value="gYnl65I1FjH1U1qcFFWOCCr_iqR1xgGlYspSBmS9KV0" />
     <!--OpenID-->
     <add key="ManagerId_0" value="o6BSO5mvDkLTbRt-EHkrsXeXu1HU" />
     <!--<add key="ManagerId_1" value="o6BSO5rBIslb1pf8YlVdfYPf7NEQ" />-->
@@ -54,8 +53,8 @@
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <authentication mode="Forms" >
-      <forms loginUrl="~/Admin/Account/Login" name="TeaAuthCookies"  slidingExpiration="true" timeout="30" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Admin/Account/Login" name="TeaAuthCookies" slidingExpiration="true" timeout="30" />
     </authentication>
     <httpRuntime targetFramework="4.5" />
     <httpModules>
@@ -90,10 +89,21 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
