--- a/WK.Tea.Web/Web.config
+++ b/WK.Tea.Web/Web.config
@@ -20,9 +20,9 @@
     <!--微信消息体加密对应的EncodingAESKey-->
     <add key="EncodingAESKey" value="" />
     <!--微信AppId-->
-    <add key="AppID" value="wx1db2ce96ffcde003" />
+    <add key="AppID" value="wxcdc2c7679d917ddb" />
     <!--微信AppSecret-->
-    <add key="AppSecret" value="d8f85f2d83988fe8f08d1786a7ef317e" />
+    <add key="AppSecret" value="ca109d32b40b0dd5e743bdb9b77f1ecc" />
     <!--用于微信支付的PartnerKey-->
     <add key="PartnerKey" value="5a1aec6016b3491eaad63bcd1f3b3ae2" />
     <!--用于微信支付的商户号-->
