--- a/WK.Tea.Lock.ApiRequest/WK.Tea.Lock.ApiRequest.csproj
+++ b/WK.Tea.Lock.ApiRequest/WK.Tea.Lock.ApiRequest.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="CreateCardResponse.cs" />
     <Compile Include="CreateCardRequest.cs" />
+    <Compile Include="EEUN\TokenRequest.cs" />
     <Compile Include="EEUN\WebApiHelper.cs" />
     <Compile Include="GetCardRequest.cs" />
     <Compile Include="GetCardResponse.cs" />
